--- a/THANKS
+++ b/THANKS
@@ -11,6 +11,7 @@ Chris Rebert (@cvrebert)
 Colm MacCárthaigh (@colmmacc)
 Donald Stufft (@dstufft)
 Douglas Campos (@qmx)
+Eric Dong (@quantum1423)
 Eric Voskuil (@evoskuil)
 Gabriel Handford (@gabriel)
 Jachym Holecek (@freza)
